tests/NormalTests/paczka1/fuzzy1/92575003.err
Error in line 7: A786 A525 1,5
Error in line 15: NqjOvuAfZDH A525 72,1
Error in line 16: NqjOvuAfZDH A959 72,3
Error in line 21: 4eOVvfQJ A786 9,9
Error in line 28: LxR A959 78,2
Error in line 33: A786 A786 -2,7
Error in line 20: ZqQbJK A959 68,1
Error in line 31: LxR A525 6,2
